2007-04-22  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (TclDeleteNamespaceVars): fixed access to freed
	memory detected by valgrind.

2007-04-21  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a6 TAGGED FOR RELEASE ***

2007-04-20  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclListObj.c (SetListFromAny): avoid discarding internal
	reps of objects converted to singleton lists [Patch 738900]

2007-04-20  Kevin B. Kenny  <kennykb@acm.org>

	* doc/clock.n: Corrected a silly error (transposed 'uppercase'
	and 'lowercase' in clock.n. [Bug 1656002]
	Clarified that [clock scan] does not recognize a locale's
	alternative calendar.
	Deleted an entirely superfluous (and also incorrect) remark
	about the effect of Daylight Saving Time on relative times
	in [clock scan]. [Bug 1582951]
	* library/clock.tcl: Corrected an error in skipping over the
	%Ey field on input.
	* library/msgs/ja.msg:
	* tools/loadICU.tcl: Corrected several localisation faults in
	the Japanese locale (most notably, incorrect dates for the
	Emperors' eras). [Bug 1637471].  Many thanks to SourceForge
	user 'nyademo' for pointing this out and developing a fix.
	* generic/tclPathObj.c: Corrected a 'const'ness fault that
	caused bitter complaints from MSVC.
	* tests/clock.test (clock-40.1, clock-58.1, clock-59.1): Corrected a
	test case that depended on ":localtime" being able to handle
	dates prior to the Posix epoch, [Bug 1618445]  Added a test 
	case for the dates of the Japanese emperors. [Bug 1637471]
	Added a regression test for military time zone input conversion.
	[Bug 1586828].
	* generic/tclGetDate.y (MilitaryTable): Fixed an ancient bug where
	the military NZA time zones had the signs reversed [Bug 1586828].
	* generic/tclDate.c: Regenerated.
	* doc/Notifier.3: Documented Tcl_SetNotifier and
	Tcl_ServiceModeHook. Quite against my better judgment.
	[Bug 414933]
	* generic/tclBasic.c:
	* generic/tclCkalloc.c:
	* generic/tclClock.c:
	* generic/tclCmdIL.c:
	* generic/tclCmdMZ.c: