@@ -1,3 +1,13 @@
+2007-04-23  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tclEnv.c (ReplaceString): Clear memory correctly when
+	growing the cache to avoid reads of uninitialised data.
+	* generic/tclStrToD.c (AccumulateDecimalDigit): Fixed a mistake
+	where we'd run beyond the end of the 'pow10_wide' array if
+	a number begins with a string of more than 'maxpow10_wide' zeroes.
+	Both these issues reported under [Bug 1705778] - detected with
+	the existing test suite, no new regression tests required.
+	
 2007-04-22  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclVar.c (TclDeleteNamespaceVars): fixed access to freed
